// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> snapshot should render the same 1`] = `
"Snapshot Diff:
 Compared values have no visual difference."
`;

exports[`<RadioGroup /> snapshot should render the same, with <RadioGroup.Button /> 1`] = `
"Snapshot Diff:
 - Expected
+ Received

  <div
    className=\\"FieldGroup-sc-18uoi37-0 RadioGroup__Group-sc-1l7wvp0-0 bGVwQY eGpFsa\\"
    role=\\"radiogroup\\"
  >
    <div
      className=\\"RadioButton__Wrapper-sc-1q7g63p-2\\"
    >
      <label
        checked={false}
        className=\\"RadioButton-sc-1q7g63p-3 fBLCTx\\"
        disabled={false}
-       htmlFor=\\"radio-button-9\\"
+       htmlFor=\\"radio-button-12\\"
        size=\\"medium\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 dVGkMH\\"
          disabled={false}
-         id=\\"radio-button-9\\"
+         id=\\"radio-button-12\\"
          name=\\"foo\\"
          onChange={[Function onChange]}
          required={false}
          type=\\"radio\\"
          value=\\"Foo\\"
        />
        Foo
      </label>
    </div>
    <div
      className=\\"RadioButton__Wrapper-sc-1q7g63p-2\\"
    >
      <label
        checked={false}
        className=\\"RadioButton-sc-1q7g63p-3 fBLCTx\\"
        disabled={false}
-       htmlFor=\\"radio-button-10\\"
+       htmlFor=\\"radio-button-13\\"
        size=\\"medium\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 dVGkMH\\"
          disabled={false}
-         id=\\"radio-button-10\\"
+         id=\\"radio-button-13\\"
          name=\\"foo\\"
          onChange={[Function onChange]}
          required={false}
          type=\\"radio\\"
          value=\\"Bar\\"
        />
        Bar
      </label>
    </div>
    <div
      className=\\"RadioButton__Wrapper-sc-1q7g63p-2\\"
    >
      <label
        checked={false}
        className=\\"RadioButton-sc-1q7g63p-3 fBLCTx\\"
        disabled={false}
-       htmlFor=\\"radio-button-11\\"
+       htmlFor=\\"radio-button-14\\"
        size=\\"medium\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 dVGkMH\\"
          disabled={false}
-         id=\\"radio-button-11\\"
+         id=\\"radio-button-14\\"
          name=\\"foo\\"
          onChange={[Function onChange]}
          required={false}
          type=\\"radio\\"
          value=\\"Baz\\"
        />
        Baz
      </label>
    </div>
  </div>"
`;

exports[`<RadioGroup /> snapshot simple with <RadioGroup.Button /> 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  position: relative;
}

<div
  className="c0 c1"
  role="radiogroup"
>
  <div
    className="RadioButton__Wrapper-sc-1q7g63p-2"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="radio-button-3"
      size="medium"
    >
      <input
        checked={false}
        className="c3"
        disabled={false}
        id="radio-button-3"
        name="groceries"
        onChange={[Function]}
        required={false}
        type="radio"
        value="Foo"
      />
      Foo
    </label>
  </div>
  <div
    className="RadioButton__Wrapper-sc-1q7g63p-2"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="radio-button-4"
      size="medium"
    >
      <input
        checked={false}
        className="c3"
        disabled={false}
        id="radio-button-4"
        name="groceries"
        onChange={[Function]}
        required={false}
        type="radio"
        value="Bar"
      />
      Bar
    </label>
  </div>
  <div
    className="RadioButton__Wrapper-sc-1q7g63p-2"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="radio-button-5"
      size="medium"
    >
      <input
        checked={false}
        className="c3"
        disabled={false}
        id="radio-button-5"
        name="groceries"
        onChange={[Function]}
        required={false}
        type="radio"
        value="Baz"
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> snapshot simple with <RadioGroup.Button /> inline 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c4 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  display: inline-block;
  margin-right: 16px;
  vertical-align: top;
}

.c2:last-child {
  margin-right: 0;
}

.c2 .RadioButton__LockIcon-sc-1q7g63p-0 {
  font-size: 16px;
  margin-left: 8px;
}

.c3 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  position: relative;
}

<div
  className="c0 c1"
  role="radiogroup"
>
  <div
    className="c2"
  >
    <label
      checked={false}
      className="c3"
      disabled={false}
      htmlFor="radio-button-6"
      size="medium"
    >
      <input
        checked={false}
        className="c4"
        disabled={false}
        id="radio-button-6"
        name="groceries"
        onChange={[Function]}
        required={false}
        type="radio"
        value="Foo"
      />
      Foo
    </label>
  </div>
  <div
    className="c2"
  >
    <label
      checked={false}
      className="c3"
      disabled={false}
      htmlFor="radio-button-7"
      size="medium"
    >
      <input
        checked={false}
        className="c4"
        disabled={false}
        id="radio-button-7"
        name="groceries"
        onChange={[Function]}
        required={false}
        type="radio"
        value="Bar"
      />
      Bar
    </label>
  </div>
  <div
    className="c2"
  >
    <label
      checked={false}
      className="c3"
      disabled={false}
      htmlFor="radio-button-8"
      size="medium"
    >
      <input
        checked={false}
        className="c4"
        disabled={false}
        id="radio-button-8"
        name="groceries"
        onChange={[Function]}
        required={false}
        type="radio"
        value="Baz"
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> snapshot simple with <RadioGroup.Radio /> 1`] = `
.c2 {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c5 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c7 {
  border-radius: 50%;
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 24px;
  position: relative;
  top: 6px;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  margin-right: 8px;
}

.c7:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 60%;
  left: 20%;
  position: absolute;
  top: 20%;
  width: 60%;
  background-color: #1250C4;
}

.c3 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 .c4:checked ~ .c6 {
  border-color: #1250C4;
}

.c3 .c4:checked ~ .c6:after {
  background-color: #1250C4;
  display: block;
}

.c3 .c4:focus ~ .c6 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c3:hover .c6,
.c3:focus .c6 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c3 .c4:checked:disabled ~ .c6 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c1 {
  position: relative;
}

<div
  className="c0 c1"
  role="radiogroup"
>
  <label
    className="c2 c3"
    disabled={false}
  >
    <input
      className="c4 c5"
      disabled={false}
      name="groceries"
      onChange={[Function]}
      required={false}
      size="medium"
      type="radio"
      value="Foo"
    />
    <span
      className="c6 c7"
    />
    <span>
      Foo
    </span>
  </label>
  <label
    className="c2 c3"
    disabled={false}
  >
    <input
      className="c4 c5"
      disabled={false}
      name="groceries"
      onChange={[Function]}
      required={false}
      size="medium"
      type="radio"
      value="Bar"
    />
    <span
      className="c6 c7"
    />
    <span>
      Bar
    </span>
  </label>
  <label
    className="c2 c3"
    disabled={false}
  >
    <input
      className="c4 c5"
      disabled={false}
      name="groceries"
      onChange={[Function]}
      required={false}
      size="medium"
      type="radio"
      value="Baz"
    />
    <span
      className="c6 c7"
    />
    <span>
      Baz
    </span>
  </label>
</div>
`;

exports[`<RadioGroup /> snapshot simple with button options 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  position: relative;
}

<div
  className="c0 c1"
  role="radiogroup"
>
  <div
    className="RadioButton__Wrapper-sc-1q7g63p-2"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="radio-button-0"
      size="medium"
    >
      <input
        checked={false}
        className="c3"
        disabled={false}
        id="radio-button-0"
        name="foo"
        onChange={[Function]}
        required={false}
        type="radio"
        value="Foo"
      />
      Foo
    </label>
  </div>
  <div
    className="RadioButton__Wrapper-sc-1q7g63p-2"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="radio-button-1"
      size="medium"
    >
      <input
        checked={false}
        className="c3"
        disabled={false}
        id="radio-button-1"
        name="foo"
        onChange={[Function]}
        required={false}
        type="radio"
        value="Bar"
      />
      Bar
    </label>
  </div>
  <div
    className="RadioButton__Wrapper-sc-1q7g63p-2"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="radio-button-2"
      size="medium"
    >
      <input
        checked={false}
        className="c3"
        disabled={false}
        id="radio-button-2"
        name="foo"
        onChange={[Function]}
        required={false}
        type="radio"
        value="Baz"
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> snapshot simple with options 1`] = `
.c2 {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c5 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c7 {
  border-radius: 50%;
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 24px;
  position: relative;
  top: 6px;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  margin-right: 8px;
}

.c7:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 60%;
  left: 20%;
  position: absolute;
  top: 20%;
  width: 60%;
  background-color: #1250C4;
}

.c3 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 .c4:checked ~ .c6 {
  border-color: #1250C4;
}

.c3 .c4:checked ~ .c6:after {
  background-color: #1250C4;
  display: block;
}

.c3 .c4:focus ~ .c6 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c3:hover .c6,
.c3:focus .c6 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c3 .c4:checked:disabled ~ .c6 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c1 {
  position: relative;
}

<div
  className="c0 c1"
  role="radiogroup"
>
  <label
    className="c2 c3"
    disabled={false}
  >
    <input
      className="c4 c5"
      disabled={false}
      name="foo"
      onChange={[Function]}
      required={false}
      size="medium"
      type="radio"
      value="Foo"
    />
    <span
      className="c6 c7"
    />
    <span>
      Foo
    </span>
  </label>
  <label
    className="c2 c3"
    disabled={false}
  >
    <input
      className="c4 c5"
      disabled={false}
      name="foo"
      onChange={[Function]}
      required={false}
      size="medium"
      type="radio"
      value="Bar"
    />
    <span
      className="c6 c7"
    />
    <span>
      Bar
    </span>
  </label>
  <label
    className="c2 c3"
    disabled={false}
  >
    <input
      className="c4 c5"
      disabled={false}
      name="foo"
      onChange={[Function]}
      required={false}
      size="medium"
      type="radio"
      value="Baz"
    />
    <span
      className="c6 c7"
    />
    <span>
      Baz
    </span>
  </label>
</div>
`;

exports[`<RadioGroup /> snapshot with an error 1`] = `
.c8 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c2 {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c5 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c7 {
  border-radius: 50%;
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 24px;
  position: relative;
  top: 6px;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  margin-right: 8px;
}

.c7:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 60%;
  left: 20%;
  position: absolute;
  top: 20%;
  width: 60%;
  background-color: #1250C4;
}

.c3 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 .c4:checked ~ .c6 {
  border-color: #1250C4;
}

.c3 .c4:checked ~ .c6:after {
  background-color: #1250C4;
  display: block;
}

.c3 .c4:focus ~ .c6 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c3:hover .c6,
.c3:focus .c6 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c3 .c4:checked ~ .c6 {
  border-color: #e91b0c;
}

.c3 .c4:checked ~ .c6:after {
  background-color: #e91b0c;
  display: block;
}

.c3 .c4:focus ~ .c6 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c3 .c6 {
  border-color: #e91b0c;
}

.c3:hover .c6,
.c3:focus .c6 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c3 .c4:checked:disabled ~ .c6 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c1 {
  position: relative;
}

<div
  className="c0 c1"
  role="radiogroup"
>
  <label
    className="c2 c3"
    disabled={false}
  >
    <input
      className="c4 c5"
      disabled={false}
      name="groceries"
      onChange={[Function]}
      required={false}
      size="medium"
      type="radio"
      value="Foo"
    />
    <span
      className="c6 c7"
    />
    <span>
      Foo
    </span>
  </label>
  <span
    className="c8"
  >
    Error text
  </span>
</div>
`;

exports[`<RadioGroup /> snapshot with required 1`] = `
.c2 {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c5 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c7 {
  border-radius: 50%;
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 24px;
  position: relative;
  top: 6px;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  margin-right: 8px;
}

.c7:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 60%;
  left: 20%;
  position: absolute;
  top: 20%;
  width: 60%;
  background-color: #1250C4;
}

.c3 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 .c4:checked ~ .c6 {
  border-color: #1250C4;
}

.c3 .c4:checked ~ .c6:after {
  background-color: #1250C4;
  display: block;
}

.c3 .c4:focus ~ .c6 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c3:hover .c6,
.c3:focus .c6 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c3 .c4:checked:disabled ~ .c6 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c1 {
  position: relative;
}

<div
  className="c0 c1"
  role="radiogroup"
>
  <label
    className="c2 c3"
    disabled={false}
  >
    <input
      className="c4 c5"
      disabled={false}
      name="groceries"
      onChange={[Function]}
      required={true}
      size="medium"
      type="radio"
      value="Foo"
    />
    <span
      className="c6 c7"
    />
    <span>
      Foo
    </span>
  </label>
</div>
`;
